{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "6d638e77-13f6-4a57-b0d9-a619d6d5cf68",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "6b7385b3-bf8f-419d-b0ad-e4e7a13c333e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "dc1f542f-eb49-4741-a972-2afddd630d15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Middle",
                    "type": "Button",
                    "id": "4c79e2a4-5d6d-4c41-92a5-9d4616645b05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "269d56da-c50b-48ee-b454-b74d545bc570",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e0511e1-44ba-4356-b0ef-46f2b0976b98",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dea38719-afa5-44e2-a73f-9b0b8e82fd95",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Middle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraInGame",
            "id": "ed074946-88ec-43b9-93c5-b765cc65538f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "5bb5c8a0-8afb-428f-ad4b-8e631563f53e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "642110ed-6f86-4d92-a2db-224c47dde65e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a13ae175-cb51-4ef7-9c2f-bf0a51b330b5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6aafdd00-39b3-48c1-af4f-66be45139471",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b1ade69a-ca48-4c13-8570-0da0ec34af50",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "10a4007d-b5be-4a30-aa2c-b0b3de92cc5e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0dcb1654-6cb0-412e-b281-20537331627b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "8a174238-f158-4cbf-a0ca-da850c0bae15",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "946252cb-8767-45bd-beb8-4d0d670430c2",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "783f0135-6eef-4c44-9a64-45b7ffd72c98",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "BuildKeys",
            "id": "29f5212c-db49-4355-82f9-fb66633d9914",
            "actions": [
                {
                    "name": "MultiBuild",
                    "type": "Button",
                    "id": "6c21c3e9-2802-43bd-9ef3-d29af618ff17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "One",
                    "type": "Button",
                    "id": "9481fac0-f3d4-4d89-9b5e-348b4716bc6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Two",
                    "type": "Button",
                    "id": "133f8869-717d-49a7-b356-56929c265ee9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Three",
                    "type": "Button",
                    "id": "6d479b1a-908b-48b1-885f-e8376fceac88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Four",
                    "type": "Button",
                    "id": "ac2f48d0-2653-4ace-8d0d-7496359bf1d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Five",
                    "type": "Button",
                    "id": "3698031e-6507-4426-9ffe-457d8a152f21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Six",
                    "type": "Button",
                    "id": "7d95b92c-a534-49f8-92d8-ab1b3722e25d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Seven",
                    "type": "Button",
                    "id": "d8ed9c72-6d7a-46cc-b6cd-6eb35df20dee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Eight",
                    "type": "Button",
                    "id": "bff0a52e-a45e-4fc9-8629-239c5f22cfa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Nine",
                    "type": "Button",
                    "id": "77c3f1b8-78ab-41a4-9bd5-749163b4f4c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zero",
                    "type": "Button",
                    "id": "6fdd3422-6d52-45e2-8663-5b4366216bab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Upgrade",
                    "type": "Button",
                    "id": "1b550666-ec4e-408e-9099-2d367b50e474",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5bd3f877-c03e-4b88-a87b-fe040ce6c90f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MultiBuild",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51d1d456-bda9-4b10-8949-f2c5b19eab0b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "One",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c9ddc20-fd53-4895-865b-98b195f88725",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Two",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e541f894-3005-4964-bf42-a5ed5a930e34",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Three",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd72bd21-3c25-4b8a-bb73-14a7e24bbe09",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Four",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5013980-9f04-4368-87cb-36fbd6907afc",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Five",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "291a2d1e-c9d9-4e28-8703-e3cff78586ee",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Six",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "815e35b4-a397-4c3b-a33c-d66b931b0d36",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Upgrade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0beac8ad-1e09-4281-81a3-c27a310e53ca",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Seven",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "293d9424-ac89-4a33-a486-078208c84856",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Eight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "006616fd-3eb1-4546-b06f-6a6db0092e54",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Nine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7ebf2f6-385d-498c-9c7a-517896853f77",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}